<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="back">Назад</string>
    <!--  Ссылка на курс  -->
    <string name="share_text_url">https://practicum.yandex.ru/android-developer/</string>
    <!--  Письмо в поддержку  -->
    <string-array name="email_list">
        <item>nkyancen@yandex.ru</item>
    </string-array>
    <string name="mail_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mail_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <!--  Ссылка на оферту  -->
    <string name="offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <!--  Плейсхолдер экрана поиска -->
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_without_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_refresh">Обновить</string>
    <!--  История поиска  -->
    <string name="search_history_title">История поиска</string>
    <string name="search_history_clear">Очистить историю</string>
    <!--  Медиаплеер  -->
    <string name="player_track_time">Длительность</string>
    <string name="player_track_album">Альбом</string>
    <string name="player_track_year">Год</string>
    <string name="player_track_genre">Жанр</string>
    <string name="player_track_country">Страна</string>
    <string name="player_play_button_description">play/pause</string>
    <string name="player_add_button_description">Add to playlist</string>
    <string name="player_favorites_button_description">Add to favorites</string>
    <string name="player_album_image_description">Album Image</string>
    <!--  Медиатека  -->
    <string name="favorites_empty">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="create_new_playlist">Создать</string>
    <string name="new_playlist_title">Название*</string>
    <string name="new_playlist_description">Описание</string>
    <string name="new_playlist_exit_dialog_title">Завершить создание плейлиста?</string>
    <string name="new_playlist_exit_dialog_description">Все несохраненные данные будут потеряны</string>
    <string name="cansel">Отмена</string>
    <string name="complete">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="message_add_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="message_track_already_in_playlist">Трек уже добавлен в плейлист %1$s</string>

    <string name="delete_track_confirmation">Хотите удалить трек?</string>
    <string name="delete_track_confirmation_positive">Да</string>
    <string name="delete_track_confirmation_negative">Нет</string>

    <string name="delete_playlist_confirmation_title">Удалить плейлист</string>
    <string name="delete_playlist_confirmation_body">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_playlist_confirmation_positive">Удалить</string>
    <string name="delete_playlist_confirmation_negative">Отмена</string>
    <string name="has_not_share_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    
    <string name="playlist_menu_share">Поделиться</string>
    <string name="playlist_menu_edit">Редактировать информацию</string>
    <string name="playlist_menu_delete">Удалить плейлист</string>

    <string name="playlist_details_placeholder_text">В этом плейлисте нет ни одного трека</string>

    <string name="editor_title">Редактировать</string>
    <string name="editor_button_text">Сохранить</string>

    <plurals name="track_amount">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
    </plurals>

    <plurals name="total_playback_time">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
    </plurals>
</resources>