<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/LinearVertical"
    android:background="?attr/colorSecondary"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mainHeader"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/HeaderTextStyle"
        app:titleTextColor="@color/white" />

    <LinearLayout
        style="@style/LinearVertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="12dp"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            style="@style/Button.Main"
            android:text="@string/search"
            app:icon="@drawable/ic_search_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mediaButton"
            style="@style/Button.Main"
            android:text="@string/media"
            app:icon="@drawable/ic_media_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settingsButton"
            style="@style/Button.Main"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings_24" />
    </LinearLayout>
</LinearLayout>

