<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/environment_heading_padding">

        <Button
            android:id="@+id/button_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/back"
            android:foreground="?attr/selectableItemBackground"
            android:outlineSpotShadowColor="@color/white"
            app:icon="@drawable/ic_arrow_back"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconTint="@color/dark_grey" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:paddingStart="@dimen/header_padding"
            android:paddingTop="@dimen/header_padding_top"
            android:paddingEnd="@dimen/header_padding"
            android:paddingBottom="@dimen/header_padding"
            android:text="@string/settings"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/header_text_size" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_dark_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:foreground="?attr/selectableItemBackground"
        android:paddingVertical="21dp"
        android:paddingStart="@dimen/settings_padding_text_start"
        android:paddingEnd="@dimen/settings_padding_text_end"
        android:text="@string/dark_theme"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/settings_text_size"
        app:switchMinWidth="35dp" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:foreground="?attr/selectableItemBackground"
        android:outlineSpotShadowColor="@color/white"
        android:paddingStart="@dimen/settings_padding_text_start"
        android:paddingTop="@dimen/settings_padding_text_top"
        android:paddingEnd="@dimen/settings_padding_text_end"
        android:paddingBottom="@dimen/settings_padding_text_bottom"
        android:text="@string/share"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/settings_text_size"
        app:icon="@drawable/ic_share"
        app:iconGravity="end"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconTint="@color/grey" />

    <Button
        android:id="@+id/button_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:foreground="?attr/selectableItemBackground"
        android:outlineSpotShadowColor="@color/white"
        android:paddingStart="@dimen/settings_padding_text_start"
        android:paddingTop="@dimen/settings_padding_text_top"
        android:paddingEnd="@dimen/settings_padding_text_end"
        android:paddingBottom="@dimen/settings_padding_text_bottom"
        android:text="@string/support"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/settings_text_size"
        app:icon="@drawable/ic_support"
        app:iconGravity="end"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconTint="@color/grey" />

    <Button
        android:id="@+id/button_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:fontFamily="sans-serif"
        android:foreground="?attr/selectableItemBackground"
        android:outlineSpotShadowColor="@color/white"
        android:paddingStart="@dimen/settings_padding_text_start"
        android:paddingTop="@dimen/settings_padding_text_top"
        android:paddingEnd="@dimen/settings_padding_text_end"
        android:paddingBottom="@dimen/settings_padding_text_bottom"
        android:text="@string/user_agreement"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/settings_text_size"
        app:icon="@drawable/ic_arrow_forward"
        app:iconGravity="end"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconTint="@color/grey" />

</LinearLayout>