<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".medialibrary.playlists.presentation.fragment.CreatePlaylistFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/newPlaylistHeader"
        style="@style/ToolBar.NewPlaylist"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_playlist" />

    <ImageView
        android:id="@+id/newPlaylistImage"
        android:layout_width="312dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/new_playlist_padding"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_image_border"
        android:contentDescription="@string/new_playlist"
        android:scaleType="centerCrop"
        android:clipToOutline="true"
        app:layout_constraintDimensionRatio="h, 1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistHeader"
        tools:src="@drawable/ic_add_photo_312"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/newPlaylistTitleLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/new_playlist_title"
        android:textColorHint="?attr/colorOnPrimary"
        app:boxStrokeColor="@color/text_input_box_stroke"
        app:counterOverflowTextColor="?attr/colorPrimaryVariant"
        app:hintTextColor="?attr/colorPrimaryVariant"
        app:cursorColor="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistImage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPlaylistTitleEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/new_playlist_description"
        android:textColorHint="?attr/colorOnPrimary"
        app:boxStrokeColor="@color/text_input_box_stroke"
        app:counterOverflowTextColor="?attr/colorPrimaryVariant"
        app:hintTextColor="?attr/colorPrimaryVariant"
        app:cursorColor="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/newPlaylistTitleLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPlaylistDescriptionEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorOnPrimary"
            android:textColorHint="?attr/colorOnPrimary" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/newPlaylistCreateButton"
        style="@style/Button"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_playlist_create_button"
        android:text="@string/create_new_playlist"
        android:textAppearance="@style/NewPlaylistButtonTextStyle"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>